feat add optional params on getAllTopic API
